# obsolete-magi-minerd

./: .gitignore  Makefile.am  README  configure.ac  cpu-miner.cpp  hashblock.h  magi-minerd.bat  magi-minerd.bat~  magi-minerd.sh  magi-minerd.sh~  magimath.h  miner.h  paras_m.mod  spectral_weight_m.mod  util.c  util.h
